--- a/source/styles/blocks/header.scss
+++ b/source/styles/blocks/header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: #663399;
+  /* background-color: #663399;
   color: #ffffff;
-  padding: 10px 15px;
+  padding: 10px 15px; */
 }
