added fonts, html, classes BEM

--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -1,1 +1,47 @@
-/* здесь используйте глобальные селекторы img, body, html и так далее */
+@use "./variables.scss";
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  object-fit: contain;
+}
+
+.page {
+  height: 100%;
+}
+
+.page__body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  font-family: $primary-font;
+  color: $text-color;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.page__main {
+  flex: 1; // flex-grow: 1; flex-shrink: 0; flex-basis: auto;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
