--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -1,1 +1,26 @@
-/* здесь используйте глобальные переменные */
+/* Fonts */
+$primary-font: "Montserrat-Regular", sans-serif;
+$secondary-font: "Montserrat-SemiBold", sans-serif;
+$tertiary-font: "Montserrat-Bold", sans-serif;
+
+// Viewports
+$tablet-width: 768px;
+$desktop-width: 1440px;
+$mobile-width-only: 767px;
+
+/* Colors */
+$text-color: #333333;
+$accent-color: #7859cf;
+
+$bg-light: #f8f8f8;
+$bg-grey: #bdbdbd;
+/* Slider */
+$bg-slider-one: #f3ebe1;
+$bg-slider-two: #eae6fc;
+$bg-slider-three: #e5e6e8;
+
+$white-color: #ffffff;
+$t-color: #f0ebff;
+$bg-color: #9070ec;
+$bg-color-secondary: #593cac;
+$grey: #e2e2e2;
