--- a/source/styles/common/fonts.scss
+++ b/source/styles/common/fonts.scss
@@ -1,3 +1,3 @@
-@include font-face("Montserrat-Regular", 400, normal, swap, url("../fonts/Montserrat-Regular.woff2") format("woff2"));
+@include font-face("Montserrat", 400, normal, swap, url("../fonts/Montserrat-Regular.woff2") format("woff2"));
 @include font-face("Montserrat-SemiBold", 600, normal, swap, url("../fonts/Montserrat-SemiBold.woff2") format("woff2"));
 @include font-face("Montserrat-Bold", 700, normal, swap, url("../fonts/Montserrat-Bold.woff2") format("woff2"));
