--- a/source/styles/blocks/cards.scss
+++ b/source/styles/blocks/cards.scss
@@ -12,32 +12,90 @@
 
   &__list {
     list-style-type: none;
-    margin: 0;
+    margin: 0 0 40px;
     padding: 0;
+    display: grid;
+    gap: 20px;
+
+    @media (min-width: $tablet-width) {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 30px;
+    }
+
+    @media (min-width: $desktop-mini-width) {
+      grid-template-columns: repeat(3, 1fr);
+      gap: 30px;
+    }
   }
 
   &__item {
+    width: 280px;
+    padding: 30px 0;
     background-color: $white-color;
+    border-radius: 4px;
+
+    @media (min-width: $tablet-width) {
+      width: 337px;
+      padding: 50px 0 30px;
+    }
+
+    @media (min-width: $desktop-mini-width) {
+      width: 300px;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 316px;
+      padding: 50px 0 30px;
+    }
+  }
+
+  &__picture {
+    display: block;
+    width: 130px;
+    height: 188px;
+    margin: 0 auto 20px;
+  }
+
+  &__picture-img {
+    width: 130px;
+    height: 188px;
   }
 
   &__box-price {
     font-size: 20px;
     line-height: 32px;
     font-weight: 600;
-    margin: 0;
+    width: 240px;
+    margin: 0 auto;
     display: flex;
+    justify-content: space-between;
+
+    @media (min-width: $tablet-width) {
+      width: 289px;
+    }
+
+    @media (min-width: $desktop-mini-width) {
+      width: 260px;
+    }
   }
 
   &__box-title {
     font-size: 18px;
     line-height: 32px;
     font-weight: 700;
-    margin: 0;
+    width: 240px;
+    margin: 0 auto 10px;
 
     @media (min-width: $tablet-width) {
       font-size: 24px;
       line-height: 36px;
       font-weight: 700;
+      width: 289px;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 260px;
     }
   }
 
@@ -45,7 +103,16 @@
     font-size: 14px;
     line-height: 20px;
     font-weight: 400;
-    margin: 0;
+    width: 234px;
+    margin: 0 auto 20px;
+
+    @media (min-width: $tablet-width) {
+      width: 289px;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 260px;
+    }
   }
 
   &__box-button {
@@ -68,5 +135,18 @@
       mask-size: 20px 16px;
       background-color: $white-color;
     }
+  }
+
+  &__box-button:hover,
+  &__box-button:focus {
+    background-color: $btn-hover;
+  }
+
+  &__box-button:active {
+    background-color: $btn-active;
+  }
+
+  &__box-button:disabled {
+    background-color: $btn-disabled;
   }
 }
