added mobile style for slider

--- a/source/styles/blocks/slider.scss
+++ b/source/styles/blocks/slider.scss
@@ -1,46 +1,106 @@
 .slider {
   &__wrapper {
-    display: flex;
+    position: relative;
   }
 
   &__wrapper--espresso {
     background-color: $bg-slider-espresso;
-    /* background-color: $bg-slider-two; */
   }
 
   &__wrapper--white {
     background-color: $bg-slider-white;
   }
 
-  &__button-prev {
-    width: 11px;
-    height: 20px;
-    mask-image: url("../../icons/arrow-back.svg");
-    mask-size: 11px 20px;
-    mask-repeat: no-repeat;
-    mask-position: center;
-    background-color: $accent-color;
+  &__button-back,
+  &__button-next {
+    display: block;
+    position: absolute;
+    width: 20px;
+    height: 100%;
+    border: none;
+    cursor: pointer;
+    background: transparent;
+    transition: background 0.4s ease-in-out, color 0.4s ease-in-out;
+  }
 
-    &__button-prev:hover {
-      border: 2px solid red;
+  &__button-back {
+    top: 0;
+    left: 0;
+    position: absolute;
+
+    &:hover {
+      background: linear-gradient(90deg, rgba(120, 89, 207, 0.25) 0%, rgba(120, 89, 207, 0.5) 50%, rgba(120, 89, 207, 0) 100%);
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 11px;
+      height: 20px;
+      top: 50%;
+      left: 50%;
+      transform: translateX(-50%);
+      mask-image: url("../../icons/arrow-back.svg");
+      mask-size: 11px 20px;
+      mask-repeat: no-repeat;
+      mask-position: center;
+      background-color: $accent-color;
     }
   }
 
   &__button-next {
-    width: 11px;
-    height: 20px;
-    mask-image: url("../../icons/arrow-next.svg");
-    mask-size: 11px 20px;
-    mask-repeat: no-repeat;
-    mask-position: center;
-    background-color: $accent-color;
+    top: 0;
+    right: 0;
+    position: absolute;
+
+    &:hover {
+      background: linear-gradient(90deg, rgba(120, 89, 207, 0.25) 0%, rgba(120, 89, 207, 0.5) 50%, rgba(120, 89, 207, 0) 100%);
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 11px;
+      height: 20px;
+      top: 50%;
+      left: 50%;
+      transform: translateX(-50%);
+      mask-image: url("../../icons/arrow-next.svg");
+      mask-size: 11px 20px;
+      mask-repeat: no-repeat;
+      mask-position: center;
+      background-color: $accent-color;
+    }
   }
 
   &__list {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
+    padding: 0 0 50px;
+    width: 280px;
+    border: 2px solid blue;
   }
+
+  &__item {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    text-align: center;
+  }
+
+  &__content-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+
+  /* &__picture-img {
+    width: 280px;
+    height: 280px;
+    margin: 0 auto;
+    border: 2px solid orange;
+  } */
 
   &__title {
     font-size: 36px;
@@ -58,6 +118,10 @@
   }
 
   &__price {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
     &-new {
       font-size: 20px;
       line-height: 32px;
@@ -78,6 +142,7 @@
 
   &__pagination {
     display: none;
+    grid-column: 1 / 4;
 
     @media (min-width: $desktop-width) {
       display: block;
