--- a/source/styles/common/global.scss
+++ b/source/styles/common/global.scss
@@ -34,14 +34,16 @@ img {
 }
 
 .container {
-  margin: 0 20px;
+  max-width: 1440px;
+  margin: 0 auto;
+  padding: 0 10px;
 
   @media (min-width: $tablet-width) {
-    margin: 0 30px;
+    padding: 0 30px;
   }
 
   @media (min-width: $desktop-width) {
-    margin: 0 40px;
+    padding: 0 40px;
   }
 }
 
