--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -20,6 +20,7 @@ $btn-disabled:#bdbdbd;
 $bg-light: #f8f8f8;
 $bg-grey: #bdbdbd;
 $bg-light-color: #f0ebff;
+$gradient-slaider: #f3e8db;
 /* Slider */
 $bg-slider-white: #f3ebe1;
 $bg-slider-two: #eae6fc;
