--- a/source/styles/blocks/features.scss
+++ b/source/styles/blocks/features.scss
@@ -1,8 +1,9 @@
 .features {
   &__wrapper {
     display: grid;
-    padding: 50px 0 45px;
+    padding: 70px 0;
     justify-items: center;
+    text-align: center;
   }
 
   &__title {
@@ -40,42 +41,45 @@
     padding: 0;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     gap: 30px;
 
     @media (min-width: $tablet-width) {
       flex-direction: row;
       flex-wrap: wrap;
-      width: 700px;
+      /* width: 700px; */
       gap: 40px;
     }
 
     @media (min-width: $desktop-mini-width) {
-      width: 750px;
+      gap: 20px;
+      /* width: 750px; */
     }
 
     @media (min-width: $desktop-width) {
-      width: 1300px;
-      gap: 20px;
+      /* max-width: 1300px; */
     }
   }
 
   &__item {
-    padding-top: 60px;
+    padding: 60px 0 0;
+    max-width: 330px;
     position: relative;
 
     @media (min-width: $tablet-width) {
-      width: 330px;
       padding: 0 0 0 80px;
       text-align: left;
       gap: 30px;
     }
 
     @media (min-width: $desktop-mini-width) {
-      width: 340px;
+      max-width: 340px;
     }
 
     @media (min-width: $desktop-width) {
-      width: 300px;
+      padding: 60px 0 0;
+      max-width: 300px;
+      text-align: center;
     }
 
     &-description {
@@ -105,13 +109,16 @@
     top: 0;
     left: 50%;
     transform: translateX(-50%);
-    border-radius: 50%;
     background-image: url("./../../icons/features-speed.svg");
     background-repeat: no-repeat;
     background-size: 50px 56px;
 
     @media (min-width: $tablet-width) {
       left: 8%;
+    }
+
+    @media (min-width: $desktop-width) {
+      left: 50%;
     }
   }
 
@@ -123,13 +130,16 @@
     top: 0;
     left: 50%;
     transform: translateX(-50%);
-    border-radius: 50%;
     background-image: url("./../../icons/features-comfortable.svg");
     background-repeat: no-repeat;
     background-size: 50px 56px;
 
     @media (min-width: $tablet-width) {
       left: 8%;
+    }
+
+    @media (min-width: $desktop-width) {
+      left: 50%;
     }
   }
 
@@ -141,13 +151,16 @@
     top: 0;
     left: 50%;
     transform: translateX(-50%);
-    border-radius: 50%;
     background-image: url("./../../icons/features-energy.svg");
     background-repeat: no-repeat;
     background-size: 42px 56px;
 
     @media (min-width: $tablet-width) {
       left: 8%;
+    }
+
+    @media (min-width: $desktop-width) {
+      left: 50%;
     }
   }
 
@@ -156,16 +169,20 @@
     position: absolute;
     width: 46px;
     height: 56px;
-    top: 0;
+    top: 5px;
     left: 50%;
     transform: translateX(-50%);
-    border-radius: 50%;
     background-image: url("./../../icons/features-eco.svg");
     background-repeat: no-repeat;
-    background-size: 46px 56px;
+    background-size: contain;
+
 
     @media (min-width: $tablet-width) {
       left: 8%;
+    }
+
+    @media (min-width: $desktop-width) {
+      left: 50%;
     }
   }
 }
