--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -9,6 +9,7 @@
 @import "./blocks/logo.scss";
 @import "./blocks/navigation.scss";
 @import "./blocks/navigation-user.scss";
+@import "./blocks/hero.scss";
 @import "./blocks/slider.scss";
 @import "./blocks/button.scss";
 @import "./blocks/label.scss";
