--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -4,18 +4,18 @@
   &__wrapper {
     display: grid;
     justify-items: center;
-    width: 100%;
     padding: 50px 0;
+    position: relative;
   }
 
-  &__wrapper-title {
+  &__title {
     font-family: $primary-font;
     font-size: 24px;
     line-height: 36px;
     font-weight: 700;
     width: 280px;
     text-align: center;
-    margin: 0;
+    margin: 0 0 20px;
 
     @media (min-width: $tablet-width) {
       font-size: 42px;
@@ -32,7 +32,7 @@
     }
   }
 
-  &__wrapper-label {
+  &__subtitle {
     width: 280px;
     text-align: center;
     order: -1;
@@ -46,8 +46,9 @@
     }
   }
 
-  &__wrapper-products {
+  &__products {
     display: grid;
+    grid-template-columns: 1fr;
 
     @media (min-width: $desktop-width) {
       grid-template-columns: min-content 1fr;
@@ -55,14 +56,70 @@
     }
   }
 
-  &__wrapper-filter {
+  &__form {
+    display: grid;
+    gap: 30px;
+    padding-bottom: 40px;
+
+    @media (min-width: $tablet-width) {
+      grid-template-columns: repeat(3, 1fr);
+      gap: 25px;
+      padding-bottom: 60px;
+    }
+
     @media (min-width: $desktop-width) {
       grid-column: 1 / 2;
       width: 318px;
+      grid-template-columns: 1fr;
+      padding-bottom: 0;
     }
   }
 
-  &__wrapper-product {
+  &__filter-group {
+    width: 280px;
+    border: none;
+    margin: 0;
+    padding: 0;
+
+    @media (min-width: $tablet-width) {
+      width: 223px;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 100%;
+    }
+  }
+
+  &__filter-name {
+    font-size: 16px;
+    line-height: 24px;
+    font-weight: 600;
+    margin-bottom: 20px;
+  }
+
+  &__filter-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    @media (min-width: $tablet-width) {
+      width: 280px;
+      flex-direction: row;
+      justify-self: center;
+      grid-column: 1/-1;
+    }
+
+    @media (min-width: $desktop-width) {
+      flex-direction: column;
+    }
+
+    button {
+      display: block;
+      padding: 10px 20px;
+    }
+  }
+
+  &__cards {
     @media (min-width: $desktop-width) {
       grid-column: 2 / 3;
     }
