--- a/source/styles/blocks/milk-filter.scss
+++ b/source/styles/blocks/milk-filter.scss
@@ -1,1 +1,54 @@
+.milk-filter {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 
+  &__box {
+    display: block;
+    position: relative;
+  }
+
+  label {
+    display: block;
+    padding-left: 30px;
+    cursor: pointer;
+    position: relative;
+
+    &:hover {
+      opacity: 0.5;
+    }
+  }
+}
+
+.control-point {
+  position: absolute;
+  display: block;
+  width: 20px;
+  height: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  border-radius: 50px;
+  border: 2px solid $accent-color;
+  background-color: $white-color;
+  pointer-events: none;
+  z-index: 1;
+}
+
+.control-input[type="radio"]:checked + .control-point::after {
+  position: absolute;
+  content: " ";
+  width: 12px;
+  height: 12px;
+  top: 49%;
+  transform: translateY(-50%);
+  left: 2px;
+  border-radius: 50px;
+  background-color: $accent-color;
+  z-index: 5;
+  pointer-events: none;
+  transition: background-color 0.3s ease-in-out;
+}
