--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -15,9 +15,9 @@
 @import "./blocks/label.scss";
 @import "./blocks/features.scss";
 @import "./blocks/catalog.scss";
-@import "./blocks/product.scss";
 @import "./blocks/price-filter.scss";
 @import "./blocks/milk-filter.scss";
+@import "./blocks/country-filter.scss";
 @import "./blocks/cards.scss";
 @import "./blocks/pagination.scss";
 @import "./blocks/map.scss";
