--- a/source/styles/blocks/catalog.scss
+++ b/source/styles/blocks/catalog.scss
@@ -94,7 +94,7 @@
     font-size: 16px;
     line-height: 24px;
     font-weight: 600;
-    margin-bottom: 20px;
+    margin: 0 0 20px;
   }
 
   &__filter-buttons {
@@ -111,6 +111,7 @@
 
     @media (min-width: $desktop-width) {
       flex-direction: column;
+      justify-self: start;
     }
 
     button {
