--- a/source/styles/blocks/country-filter.scss
+++ b/source/styles/blocks/country-filter.scss
@@ -1,4 +1,72 @@
 .country-filter {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
   display: flex;
   flex-direction: column;
+  gap: 15px;
+
+  &__box {
+    display: block;
+    position: relative;
+  }
+
+  label {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 500;
+    position: relative;
+  }
+
+  input[type="checkbox"] {
+    display: none; /* Скрываем стандартный чекбокс */
+  }
+
+  input[type="checkbox"]:checked + .custom-checkbox {
+    background-color: #7d57c1; /* Фиолетовый цвет активного чекбокса */
+  }
+
+  input[type="checkbox"]:checked + .custom-checkbox::before {
+    left: 22px;
+  }
+
+  /* Стили для отключенных чекбоксов */
+  input[type="checkbox"]:disabled + .custom-checkbox {
+    background-color: #eee;
+    cursor: not-allowed;
+  }
+
+  input[type="checkbox"]:disabled + .custom-checkbox::before {
+    background-color: #ddd;
+  }
+
+  input[type="checkbox"]:disabled ~ .checkbox-label {
+    color: #bbb;
+    cursor: not-allowed;
+  }
+}
+
+.custom-checkbox {
+  width: 40px;
+  height: 20px;
+  background-color: #ccc;
+  border-radius: 10px;
+  position: relative;
+  transition: background 0.3s;
+
+  &::before {
+    content: "";
+    width: 16px;
+    height: 16px;
+    background-color: white;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 2px;
+    transform: translateY(-50%);
+    transition: all 0.3s;
+  }
 }
