--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -1,48 +1,95 @@
 .footer {
   &__wrapper {
     display: grid;
-    grid-template-columns: min-content 1fr;
-    /* align-items: center; */
-    border: 2px solid red;
+    grid-template-columns: 1fr;
+    padding-top: 30px;
+
+    @media (min-width: $desktop-width) {
+      grid-template-columns: 320px 1fr;
+      gap: 40px;
+      padding-top: 50px;
+    }
+  }
+
+  &__wrapper-box {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
 
     @media (min-width: $tablet-width) {
-     /*  grid-template-columns: ; */
+      grid-column: 1 / 3;
+    }
+
+    @media (min-width: $desktop-width) {
+      grid-column: 1 / 2;
+      flex-direction: column;
+      align-items: start;
+      gap: 40px;
     }
   }
 
   &__wrapper-logo {
-    grid-column: 1 / 2;
     width: 82px;
-    height: 36px;
-    border: 2px solid green;
+    height: 40px;
+    display: flex;
+    align-items: center;
 
     @media (min-width: $tablet-width) {
       width: 170px;
-      height: 36px;
+    }
+
+    @media (min-width: $desktop-mini-width) {
+      width: 236px;
+    }
+
+    @media (min-width: $desktop-width) {
+      flex-direction: column;
+      align-items: flex-start;
     }
   }
 
   &__wrapper-social-list {
+    /* width: 150px; */
     list-style-type: none;
     margin: 0;
     padding: 0;
-    grid-column: 2 / 3;
+    /* grid-column: 2 / 3; */
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 30px;
+    gap: 20px;
+
+    @media (min-width: $desktop-width) {
+      /* justify-content: start; */
+      gap: 40px;
+    }
   }
 
   &__wrapper-navigation {
     grid-column: 1 / 3;
-    border: 2px solid blue;
+    align-self: self-start;
 
     @media (min-width: $tablet-width) {
-      display: flex;
+      grid-column: 1 / 4;
+      margin-bottom: 40px;
+    }
+
+    @media (min-width: $desktop-width) {
+      grid-column: 2 / 3;
     }
   }
 
   &__copyright {
+    align-self: center;
+    grid-column: 1 / 3;
+    width: 100%;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+
+    @media (min-width: $tablet-width) {
+      grid-column: 1 / 4;
+    }
   }
 }
