--- a/source/styles/blocks/nav-links.scss
+++ b/source/styles/blocks/nav-links.scss
@@ -1,18 +1,39 @@
 .nav-links {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin-bottom: 30px;
+
+  @media (min-width: $tablet-width) {
+    width: 100%;
+    flex-direction: row;
+  }
+
+  @media (min-width: $desktop-mini-width) {
+    gap: 10px;
+  }
+
   &__box {
+    @media (min-width: $tablet-width) {
+      width: 33%;
+    }
+
     &-title {
       font-size: 14px;
       line-height: 20px;
       font-weight: 700;
       letter-spacing: 0.28px;
       color: $accent-color;
-      margin: 0;
+      margin: 0 0 20px;
     }
 
     &-list {
       list-style-type: none;
       margin: 0;
       padding: 0;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
     }
 
     &-link {
@@ -32,6 +53,7 @@
       font-weight: 400;
       color: $text-color;
       font-style: normal;
+      margin-bottom: 15px;
       padding-left: 20px;
       position: relative;
     }
