--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -22,5 +22,6 @@
 @import "./blocks/pagination.scss";
 @import "./blocks/map.scss";
 @import "./blocks/footer.scss";
+@import "./blocks/social.scss";
 @import "./blocks/nav-links.scss";
 @import "./blocks/copyright.scss";
