--- a/source/styles/blocks/nav-links.scss
+++ b/source/styles/blocks/nav-links.scss
@@ -45,6 +45,15 @@
       letter-spacing: 0.28px;
       color: $text-color;
       text-transform: uppercase;
+
+      &:hover,
+      &:focus {
+        color: $accent-color;
+      }
+
+      &:active {
+        color: $btn-active;
+      }
     }
 
     &-address {
