--- a/source/styles/blocks/slider.scss
+++ b/source/styles/blocks/slider.scss
@@ -15,13 +15,6 @@
 
     @media (min-width: $tablet-width) {
       width: 80px;
-      /* top: 50%;
-      transform: translateY(-50%); */
-    }
-
-    @media (min-width: $desktop-width) {
-      /* top: 50%;
-      transform: translateY(-50%); */
     }
   }
 
@@ -73,8 +66,8 @@
     width: 11px;
     height: 20px;
     top: 50%;
-    left: 50%;
-    transform: translateX(-50%) rotate(180deg);
+    left: 0;
+    transform: rotate(180deg);
     mask-image: url("../../icons/arrow-back.svg");
     mask-size: 11px 20px;
     mask-repeat: no-repeat;
@@ -83,18 +76,19 @@
 
     @media (min-width: $tablet-width) {
       top: 40%;
+      left: 50%;
     }
 
     @media (min-width: $desktop-width) {
       top: 50%;
-      transform: translateY(-50%);
+      transform: rotate(180deg) translateX(-50%);
     }
   }
 
   &__list {
     list-style-type: none;
     margin: 0 auto;
-    padding: 0 20px 50px 20px;
+    padding: 0 20px 50px;
     min-width: 280px;
 
     @media (min-width: $tablet-width) {
@@ -155,7 +149,7 @@
     }
   }
 
-  &__picture-img {
+  &__img {
     width: 486px;
 
     @media (min-width: $desktop-width) {
@@ -169,12 +163,17 @@
     font-weight: 700;
     letter-spacing: 0.72px;
     margin: 0;
+    order: 0;
 
     @media (min-width: $tablet-width) {
       font-size: 56px;
       line-height: 80px;
       font-weight: 700;
     }
+  }
+
+  &__label {
+    order: -1;
   }
 
   &__description {
@@ -231,6 +230,20 @@
     height: 6px;
     background-color: $white-color;
     border: none;
+    cursor: pointer;
+
+    &:hover,
+    &:focus {
+      background-color: $btn-hover;
+    }
+
+    &:active {
+      background-color: $btn-active;
+    }
+
+    &:disabled {
+      background-color: $btn-disabled;
+    }
   }
 
   &__pagination-button--active {
