--- a/source/styles/common/variables.scss
+++ b/source/styles/common/variables.scss
@@ -23,7 +23,7 @@ $bg-light-color: #f0ebff;
 $gradient-slaider: #f3e8db;
 /* Slider */
 $bg-slider-white: #f3ebe1;
-$bg-slider-two: #eae6fc;
+$bg-slider-lavender: #eae6fc;
 $bg-slider-espresso: #e5e6e8;
 
 $white-color: #ffffff;
