--- a/source/styles/blocks/features.scss
+++ b/source/styles/blocks/features.scss
@@ -11,6 +11,7 @@
     line-height: 36px;
     font-weight: 700;
     margin: 0 0 20px;
+    order: 0;
 
     @media (min-width: $tablet-width) {
       width: 720px;
@@ -27,11 +28,7 @@
     }
   }
 
-  &__label {
-    font-size: 12px;
-    line-height: 16px;
-    font-weight: 700;
-    letter-spacing: 0.48px;
+  &__subtitle {
     order: -1;
   }
 
@@ -41,23 +38,17 @@
     padding: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     gap: 30px;
 
     @media (min-width: $tablet-width) {
       flex-direction: row;
       flex-wrap: wrap;
-      /* width: 700px; */
       gap: 40px;
     }
 
     @media (min-width: $desktop-mini-width) {
+      justify-content: center;
       gap: 20px;
-      /* width: 750px; */
-    }
-
-    @media (min-width: $desktop-width) {
-      /* max-width: 1300px; */
     }
   }
 
