--- a/source/styles/blocks/footer.scss
+++ b/source/styles/blocks/footer.scss
@@ -5,9 +5,10 @@
     padding-top: 30px;
 
     @media (min-width: $desktop-width) {
-      grid-template-columns: 400px 1fr;
+      grid-template-columns: 270px 1fr;
       gap: 40px;
       padding-top: 50px;
+      align-items: flex-start;
     }
   }
 
@@ -24,7 +25,7 @@
       grid-column: 1 / 2;
       flex-direction: column;
       align-items: start;
-      gap: 40px;
+      gap: 60px;
     }
   }
 
