--- a/source/styles/blocks/pagination.scss
+++ b/source/styles/blocks/pagination.scss
@@ -4,6 +4,8 @@
     margin: 0;
     padding: 0;
     display: flex;
+    flex-wrap: wrap;
+    max-width: 900px;
     gap: 10px;
 
     @media (min-width: $tablet-width) {
