--- a/source/styles/blocks/slider.scss
+++ b/source/styles/blocks/slider.scss
@@ -1,5 +1,6 @@
 .slider {
   position: relative;
+  height: 100%;
 
   &__button-back,
   &__button-next {
@@ -7,6 +8,7 @@
     position: absolute;
     width: 20px;
     height: 100%;
+    top: 0;
     border: none;
     cursor: pointer;
     background: transparent;
@@ -106,6 +108,7 @@
     align-items: center;
     gap: 20px;
     text-align: center;
+    display: none;
 
     @media (min-width: $tablet-width) {
       font-size: 42px;
@@ -117,6 +120,10 @@
       justify-content: center;
       gap: 30px;
     }
+  }
+
+  &__item--active {
+    display: flex;
   }
 
   &__content-box {
@@ -172,7 +179,7 @@
     }
   }
 
-  &__label {
+  &__subtitle {
     order: -1;
   }
 
