--- a/source/styles/styles.scss
+++ b/source/styles/styles.scss
@@ -12,7 +12,7 @@
 @import "./blocks/hero.scss";
 @import "./blocks/slider.scss";
 @import "./blocks/button.scss";
-@import "./blocks/label.scss";
+@import "./blocks/subtitle.scss";
 @import "./blocks/features.scss";
 @import "./blocks/catalog.scss";
 @import "./blocks/price-filter.scss";
